--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,21 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  shared_preferences: ^2.0.15
   intl: ^0.17.0
-  flutter_native_splash: ^2.2.16
   flutter_riverpod: ^2.0.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_native_splash: ^2.2.16
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.1.5
+  hive_generator: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
