--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
+  intl: ^0.17.0
   flutter_native_splash: ^2.2.16
+  flutter_riverpod: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -27,7 +31,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
